[workspace]

members = [
    "bin/node",
    "bin/runtime",
    "finality-aleph",
    "pallets/aleph",
    "pallets/elections",
    "primitives",
    "aleph-client",
]

exclude = [
  "flooder",
  "e2e-tests",
  # "aleph-client",
  "fork-off",
  "benches/payout-stakers",
  "bin/cliain",
  "contracts",
]
