[package]
name = "common"
version = "0.1.0"
authors = ["Cardinal Cryptography"]
edition = "2021"

# client
[dependencies.substrate-api-client]
git = "https://github.com/fixxxedpoint/substrate-api-client.git"
rev = "ee2468bd17c4dd3afca26b63cec972dca4a4469d"
# path = "../../substrate-api-client/"
# git = "https://github.com/scs/substrate-api-client"
# rev = "a9bc023806b175fe0bc996326b5f4635c427cbcd"

[dependencies]
# Substrate dependencies
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.9", features = ["full_crypto"] }
# sp-core = { version = "4.1.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "master", features = ["full_crypto"] }

# other dependencies
log = "0.4"
serde_json = { version = "1.0" }
ws = { version = "0.9.1", features = ["ssl"] }
mio = { version = "0.6.14" }
