[package]
name = "flooder"
version = "0.1.0"
authors = ["Cardinal Cryptography"]
edition = "2021"

# client
[dependencies.substrate-api-client]
git = "https://github.com/fixxxedpoint/substrate-api-client.git"
rev = "ee2468bd17c4dd3afca26b63cec972dca4a4469d"
# path = "../../substrate-api-client/"
# git = "https://github.com/scs/substrate-api-client"
# rev = "a9bc023806b175fe0bc996326b5f4635c427cbcd"

[dependencies]
# Substrate dependencies
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.9", features = ["full_crypto"] }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.9" }
# sp-core = { version = "4.1.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "master", features = ["full_crypto"] }
# sp-runtime = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "master" }

# other dependencies
anyhow = "^1.0"
clap = {version = "3.0.0-beta.5", features = ["derive"]}
codec = { package = 'parity-scale-codec', version = "2.0.0", features = ['derive']}
common = {path = "../common" }
env_logger = "0.8"
futures = { version = "0.3", features = ["alloc"] }
hdrhistogram = "7.3.0"
log = "0.4"
rayon = "1.5.1"