[package]
name = "pallet-committee-management"
version = "0.1.0"
edition = "2021"

[dependencies]

codec = { package = "parity-scale-codec", version = "3.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.0", default-features = false, features = ["derive"] }

pallet-session = { default-features = false, git = "https://github.com/fixxxedpoint/substrate.git", branch = "unbounded_channel_FIX" }
sp-staking = { default-features = false, git = "https://github.com/fixxxedpoint/substrate.git", branch = "unbounded_channel_FIX" }
sp-std = { default-features = false, git = "https://github.com/fixxxedpoint/substrate.git", branch = "unbounded_channel_FIX" }
pallet-staking = { default-features = false, git = "https://github.com/fixxxedpoint/substrate.git", branch = "unbounded_channel_FIX" }
sp-runtime = { default-features = false, git = "https://github.com/fixxxedpoint/substrate.git", branch = "unbounded_channel_FIX" }
frame-support = { default-features = false, git = "https://github.com/fixxxedpoint/substrate.git", branch = "unbounded_channel_FIX" }
frame-system = { default-features = false, git = "https://github.com/fixxxedpoint/substrate.git", branch = "unbounded_channel_FIX" }
pallet-authorship = { default-features = false, git = "https://github.com/fixxxedpoint/substrate.git", branch = "unbounded_channel_FIX" }
sp-io = { default-features = false, git = "https://github.com/fixxxedpoint/substrate.git", branch = "unbounded_channel_FIX" }

pallets-support = { path = "../support", default-features = false }
primitives = { path = "../../primitives", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "pallet-session/std",
    "pallet-staking/std",
    "sp-staking/std",
    "sp-std/std",
    "primitives/std",
    "sp-runtime/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-authorship/std",
    "sp-io/std",
]

try-runtime = [
    "frame-support/try-runtime",
    "pallets-support/try-runtime",
]
