[package]
name = "pallet-elections"
version = "0.5.4"
edition = "2021"
license = "Apache 2.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.0", default-features = false, features = ["derive"] }

frame-support = { default-features = false, git = "https://github.com/fixxxedpoint/substrate.git", branch = "unbounded_channel_FIX" }
frame-system = { default-features = false, git = "https://github.com/fixxxedpoint/substrate.git", branch = "unbounded_channel_FIX" }
frame-election-provider-support = { default-features = false, git = "https://github.com/fixxxedpoint/substrate.git", branch = "unbounded_channel_FIX" }
pallet-authorship = { default-features = false, git = "https://github.com/fixxxedpoint/substrate.git", branch = "unbounded_channel_FIX" }
pallet-balances = { default-features = false, git = "https://github.com/fixxxedpoint/substrate.git", branch = "unbounded_channel_FIX" }
pallet-staking = { default-features = false, git = "https://github.com/fixxxedpoint/substrate.git", branch = "unbounded_channel_FIX" }
sp-core = { default-features = false, git = "https://github.com/fixxxedpoint/substrate.git", branch = "unbounded_channel_FIX" }
sp-io = { default-features = false, git = "https://github.com/fixxxedpoint/substrate.git", branch = "unbounded_channel_FIX" }
sp-staking = { default-features = false, git = "https://github.com/fixxxedpoint/substrate.git", branch = "unbounded_channel_FIX" }
sp-std = { default-features = false, git = "https://github.com/fixxxedpoint/substrate.git", branch = "unbounded_channel_FIX" }
sp-runtime = { default-features = false, git = "https://github.com/fixxxedpoint/substrate.git", branch = "unbounded_channel_FIX" }

pallets-support = { path = "../support", default-features = false }
primitives = { path = "../../primitives", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "sp-std/std",
    "sp-core/std",
    "frame-support/std",
    "frame-system/std",
    "frame-election-provider-support/std",
    "pallet-staking/std",
    "pallet-authorship/std",
    "pallets-support/std",
    "primitives/std",
    "pallet-balances/std",
    "sp-staking/std",
    "sp-runtime/std",
]
try-runtime = [
    "frame-support/try-runtime",
    "pallets-support/try-runtime",
]
