[package]
name = "pallets-support"
version = "0.1.4"
edition = "2021"

[dependencies]
frame-support = { default-features = false, git = "https://github.com/fixxxedpoint/substrate.git", branch = "unbounded_channel_FIX" }
sp-std = { default-features = false, git = "https://github.com/fixxxedpoint/substrate.git", branch = "unbounded_channel_FIX" }

[features]
default = ["std"]
std = [
    "frame-support/std",
    "sp-std/std"
]
try-runtime = [
    "frame-support/try-runtime",
]
